feat(web-dashboard): Add security middleware, error handling, and audit logging
- Add CSRF protection middleware and client-side handler for form security
- Implement comprehensive error handling service with custom error handler middleware
- Create audit logging service for tracking configuration changes and user actions
- Add debug tools service for development and troubleshooting capabilities
- Implement web logger service for centralized request and application logging
- Add error handler test suite for validating error handling behavior
- Update security headers and middleware stack in Express server configuration
- Enhance dashboard CSS styling and improve visual presentation
- Add client-side error handler for graceful error display and recovery
- Update configuration routes with improved error handling and validation
- Update integration and server tests to cover new middleware and services
- Clean up task documentation by removing excessive whitespace and formatting inconsistencies
- Update package.json dependencies to support new security and logging features

--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "chalk": "^5.3.0",
     "cli-table3": "^0.6.5",
     "connect-mongo": "^6.0.0",
+    "cookie-parser": "^1.4.7",
     "discord-arts": "^0.7.1",
     "discord-card-canvas": "^2.0.1",
     "discord-html-transcripts": "^3.2.0",
